[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Sprites/Spaceships/0015Alien.png" type="Texture" id=1]
[ext_resource path="res://src/Attributes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Enemies/EnemyAA.gd" type="Script" id=3]
[ext_resource path="res://src/Attributes/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Attributes/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Attributes/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Enemies/WanderController.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Enemies/EnemyHealthBar.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 29.4279

[sub_resource type="CapsuleShape2D" id=3]
radius = 22.9999
height = 48.0001

[sub_resource type="CircleShape2D" id=4]
radius = 942.001

[sub_resource type="CapsuleShape2D" id=5]
radius = 22.0
height = 48.0

[node name="EnemyAA" type="KinematicBody2D" groups=["enemies"]]
collision_layer = 264
collision_mask = 19
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, -6 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 19 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 1, -9 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 100

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.211765 )
shape = SubResource( 4 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 1, -9 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="WanderController" parent="." instance=ExtResource( 7 )]

[node name="EnemyHealthBar" parent="." instance=ExtResource( 8 )]
visible = false
margin_left = -40.0
margin_right = 41.0
margin_bottom = 81.0

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
